<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/activity_snap_shot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="none"
        tools:context="com.captech.teegarden.awarenessdemo.snapshot.SnapShotActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="#ffffff"
                android:elevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/activityLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_label" />

                    <TextView
                        android:id="@+id/currentActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/activityLabel"
                        android:text="---" />

                    <TextView
                        android:id="@+id/activityLikelihoodLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activityLabel"
                        android:layout_marginTop="10dp"
                        android:text="@string/activity_likelihood" />

                    <TextView
                        android:id="@+id/activityLikelihood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/currentActivity"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/activityLabel"
                        android:text="---" />

                    <TextView
                        android:id="@+id/activityBtn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/activityLikelihood"
                        android:layout_marginTop="10dp"
                        android:background="#228899"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/activity_button"
                        android:textColor="#ffffff" />

                    <ProgressBar
                        android:id="@+id/activityLoader"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:visibility="gone" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="#ffffff"
                android:elevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/headphoneLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/headphone_label" />

                    <TextView
                        android:id="@+id/currentHeadphoneState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/headphoneLabel"
                        android:text="---" />


                    <TextView
                        android:id="@+id/headphoneBtn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/currentHeadphoneState"
                        android:layout_marginTop="10dp"
                        android:background="#228899"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/headphone_button"
                        android:textColor="#ffffff" />

                    <ProgressBar
                        android:id="@+id/headphoneLoader"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:visibility="gone" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="#ffffff"
                android:elevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/latitudeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude_label" />

                    <TextView
                        android:id="@+id/latitudeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/latitudeLabel"
                        android:text="---" />

                    <TextView
                        android:id="@+id/longitudeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/latitudeLabel"
                        android:layout_marginTop="10dp"
                        android:text="@string/longitude_label" />

                    <TextView
                        android:id="@+id/longitudeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/latitudeLabel"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/longitudeLabel"
                        android:text="---" />

                    <TextView
                        android:id="@+id/locationBtn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/longitudeValue"
                        android:layout_marginTop="10dp"
                        android:background="#228899"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/location_button"
                        android:textColor="#ffffff" />

                    <ProgressBar
                        android:id="@+id/locationLoader"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:visibility="gone" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="#ffffff"
                android:elevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/placeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_place" />

                    <TextView
                        android:id="@+id/placeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/placeLabel"
                        android:text="---" />

                    <TextView
                        android:id="@+id/placeLikelihoodLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/placeLabel"
                        android:layout_marginTop="10dp"
                        android:text="@string/activity_likelihood" />

                    <TextView
                        android:id="@+id/placeLikelihoodValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/placeLabel"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/placeLikelihoodLabel"
                        android:text="---" />

                    <TextView
                        android:id="@+id/placeBtn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/placeLikelihoodValue"
                        android:layout_marginTop="10dp"
                        android:background="#228899"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/place_button"
                        android:textColor="#ffffff" />

                    <ProgressBar
                        android:id="@+id/placeLoader"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:visibility="gone" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="#ffffff"
                android:elevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/weatherLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather_label" />

                    <TextView
                        android:id="@+id/weatherValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/weatherLabel"
                        android:text="---" />

                    <TextView
                        android:id="@+id/temperatureLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/weatherLabel"
                        android:layout_marginTop="10dp"
                        android:text="@string/temperature_label" />

                    <TextView
                        android:id="@+id/temperatureValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/weatherLabel"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/temperatureLabel"
                        android:text="---" />

                    <TextView
                        android:id="@+id/weatherBtn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/temperatureValue"
                        android:layout_marginTop="10dp"
                        android:background="#228899"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/weather_button"
                        android:textColor="#ffffff" />

                    <ProgressBar
                        android:id="@+id/weatherLoader"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:visibility="gone" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>
</layout>